feat: add report posts and messages

--- a/website/index.html
+++ b/website/index.html
@@ -146,20 +146,75 @@
       <section class="section" id="faq">
         <div class="container">
           <h2 class="section-title">FAQ</h2>
-          <p class="section-sub">A few quick answers. If you have questions, email us.</p>
+          <p class="section-sub">
+            Quick answers to common questions. Still stuck? Join the Discord or email us at <a href="mailto:support@feedverse.app">support@feedverse.app</a>.
+          </p>
 
           <div class="split">
             <div class="feature">
-              <h3>Is this for “SNS AU” / “socmed AU”?</h3>
+              <h3>What is a “scenario”?</h3>
               <p>
-                Yes — but not only. Feedverse is built for narrative roleplay where posts read like a timeline, and
-                scenarios keep worlds separated. It also works great for tabletop campaigns like D&amp;D.
+                A scenario is a self-contained world: members, character profiles, posts, and conversations all stay inside
+                that scenario. It keeps multi‑universe roleplay clean and organized.
               </p>
             </div>
             <div class="feature">
-              <h3>How do I delete my account?</h3>
+              <h3>How do invite codes work?</h3>
               <p>
-                See instructions on the <a href="/legal/data-deletion.html">Data Deletion</a> page.
+                You can join a scenario using an invite code shared by the scenario owner (great for Discord groups). Invite
+                codes are case-insensitive and designed for quick onboarding.
+              </p>
+            </div>
+          </div>
+
+          <div class="split" style="margin-top: 14px">
+            <div class="feature">
+              <h3>Can I play multiple characters?</h3>
+              <p>
+                Yes. One account can create multiple character profiles within a scenario, each with its own avatar, bio,
+                and handle — so you can stay in-character without mixing identities.
+              </p>
+            </div>
+            <div class="feature">
+              <h3>Is this for “SNS AU” / “socmed AU” or D&amp;D?</h3>
+              <p>
+                Both. The timeline format is perfect for socmed AUs, and scenarios + character sheets make it a great archive
+                for tabletop campaigns (D&amp;D and beyond).
+              </p>
+            </div>
+          </div>
+
+          <div class="split" style="margin-top: 14px">
+            <div class="feature">
+              <h3>Do you support images and media?</h3>
+              <p>
+                Yes — posts and messages can include images. Uploaded media is stored on our infrastructure and treated as
+                user content (see <a href="/legal/privacy.html">Privacy &amp; Data</a>).
+              </p>
+            </div>
+            <div class="feature">
+              <h3>Does Feedverse have notifications or realtime updates?</h3>
+              <p>
+                Feedverse is built for “keeping the story moving” — with realtime updates for activity and optional push
+                notifications for things like mentions.
+              </p>
+            </div>
+          </div>
+
+          <div class="split" style="margin-top: 14px">
+            <div class="feature">
+              <h3>Is Feedverse free? Is there a beta?</h3>
+              <p>
+                Feedverse is currently in beta. All features in the beta are free and will remain free, some future
+                optional features may require a one time purchase or a subscription. The fastest way to get access
+                and updates is the Discord.
+              </p>
+            </div>
+            <div class="feature">
+              <h3>How do I delete my account or request data deletion?</h3>
+              <p>
+                You can request deletion any time — see the <a href="/legal/data-deletion.html">Data Deletion</a> page for
+                the current process and expected timeline.
               </p>
             </div>
           </div>
